--- a/src/index.css
+++ b/src/index.css
@@ -32,11 +32,8 @@ body, html {
   font-size: 0;
   min-height: 100vh;
   background-color: #fbfbfb;
-  overflow-x: hidden;
 }
 
-body::-webkit-scrollbar {
-  display: none;
-}
+
 
 
